--- a/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
+++ b/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExceptionAssert.cs" />
+    <Compile Include="LeMondGForceCsvDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MockLeMondDataProvider.cs" />
     <Compile Include="TestLeMondDataReader.cs" />
