--- a/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
+++ b/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
@@ -38,6 +38,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -46,10 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExceptionAssert.cs" />
-    <Compile Include="LeMondGForceCsvDataProvider.cs" />
+    <Compile Include="TestLeMondGForceCsvDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MockLeMondDataProvider.cs" />
     <Compile Include="TestLeMondDataReader.cs" />
+    <Compile Include="TestTcxWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LeMondCsvToTcxConverter\LeMondCsvToTcxConverter.csproj">
