--- a/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
+++ b/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
@@ -79,6 +79,7 @@
     </Compile>
     <None Include="..\README.md">
       <Link>README.md</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
