Added Computrainer 3DP data provider. It still isn't hooked to the TcxWriter

--- a/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
+++ b/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompuTrainer3DPFileProvider.cs" />
     <Compile Include="Converter.cs" />
     <Compile Include="LeMondCsvDataProvider.cs" />
     <Compile Include="LeMondGForceCsvDataProvider.cs" />
