--- a/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
+++ b/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <Compile Include="CompuTrainer3DPFileProvider.cs" />
     <Compile Include="Converter.cs" />
+    <Compile Include="ITcxData.cs" />
+    <Compile Include="ITcxTrackPoint.cs" />
     <Compile Include="LeMondCsvDataProvider.cs" />
     <Compile Include="LeMondGForceCsvDataProvider.cs" />
     <Compile Include="ILeMondDataProvider.cs" />
@@ -56,12 +58,15 @@
     <Compile Include="LeMondCsvDataLine.cs" />
     <Compile Include="LeMondDataPoint.cs" />
     <Compile Include="LeMondRevolutionCsvDataProvider.cs" />
+    <Compile Include="LeMondTcxData.cs" />
+    <Compile Include="TcxDataFactory.cs" />
     <Compile Include="MainForms.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForms.Designer.cs">
       <DependentUpon>MainForms.cs</DependentUpon>
     </Compile>
+    <Compile Include="UnitConverters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SourcedReader.cs" />
