--- a/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
+++ b/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
@@ -48,6 +48,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestTcxDataFactory.cs" />
     <Compile Include="TestCompuTrainer3DPFileProvider.cs" />
     <Compile Include="ExceptionAssert.cs" />
     <Compile Include="LeMondConcreateProviderCtorHelper.cs" />
