--- a/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
+++ b/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{5F2CF072-11A7-4C24-8BCC-5D19E0479F0B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LeMondCsvToTcxConverter</RootNamespace>
-    <AssemblyName>LeMondCsvToTcxConverter</AssemblyName>
+    <RootNamespace>ConvertToTcx</RootNamespace>
+    <AssemblyName>ConvertToTcx</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompuTrainer3DPFileProvider.cs" />
+    <Compile Include="CompuTrainerTcxData.cs" />
     <Compile Include="Converter.cs" />
     <Compile Include="ITcxData.cs" />
     <Compile Include="ITcxTrackPoint.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SourcedReader.cs" />
     <Compile Include="TcxWriter.cs" />
+    <Compile Include="Util.cs" />
     <EmbeddedResource Include="MainForms.resx">
       <DependentUpon>MainForms.cs</DependentUpon>
     </EmbeddedResource>
@@ -82,6 +84,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="..\README.md">
       <Link>README.md</Link>
