--- a/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
+++ b/LeMondCsvToTcxConverter/LeMondCsvToTcxConverter.csproj
@@ -47,32 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompuTrainer3DPFileProvider.cs" />
-    <Compile Include="CompuTrainerTcxData.cs" />
-    <Compile Include="Converter.cs" />
-    <Compile Include="ITcxData.cs" />
-    <Compile Include="ITcxTrackPoint.cs" />
-    <Compile Include="LeMondCsvDataProvider.cs" />
-    <Compile Include="LeMondGForceCsvDataProvider.cs" />
-    <Compile Include="ILeMondDataProvider.cs" />
-    <Compile Include="LeMondDataReader.cs" />
-    <Compile Include="LeMondCsvDataLine.cs" />
-    <Compile Include="LeMondDataPoint.cs" />
-    <Compile Include="LeMondRevolutionCsvDataProvider.cs" />
-    <Compile Include="LeMondTcxData.cs" />
-    <Compile Include="TcxDataFactory.cs" />
     <Compile Include="MainForms.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForms.Designer.cs">
       <DependentUpon>MainForms.cs</DependentUpon>
     </Compile>
-    <Compile Include="UnitConverters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SourcedReader.cs" />
-    <Compile Include="TcxWriter.cs" />
-    <Compile Include="Util.cs" />
     <EmbeddedResource Include="MainForms.resx">
       <DependentUpon>MainForms.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,6 +81,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConvertToTcx\ConvertToTcx.csproj">
+      <Project>{B3AF4C7D-E31A-48E1-B791-4FCCF5A7DB93}</Project>
+      <Name>ConvertToTcx</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
