--- a/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
+++ b/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
@@ -62,15 +62,15 @@
     <Compile Include="TestTcxWriter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LeMondCsvToTcxConverter\LeMondCsvToTcxConverter.csproj">
-      <Project>{5F2CF072-11A7-4C24-8BCC-5D19E0479F0B}</Project>
-      <Name>LeMondCsvToTcxConverter</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="..\Samples\CompuTrainer\John-CompuTrainer_TimeTrial-2012-01-04-21-44-16.3dp">
       <Link>John-CompuTrainer_TimeTrial-2012-01-04-21-44-16.3dp</Link>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConvertToTcx\ConvertToTcx.csproj">
+      <Project>{B3AF4C7D-E31A-48E1-B791-4FCCF5A7DB93}</Project>
+      <Name>ConvertToTcx</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
