--- a/WebConvertToTcx/Web.config
+++ b/WebConvertToTcx/Web.config
@@ -16,11 +16,11 @@
     <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0" />
 
-    <authentication mode="None"/>
-      <!--<forms loginUrl="~/Account/Login.aspx" timeout="2880" />
+    <!--<authentication mode="None"/>
+      --><!--<forms loginUrl="~/Account/Login.aspx" timeout="2880" />
     </authentication>-->
 
-    <membership>
+    <!--<membership>
       <providers>
         <clear/>
         <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices"
@@ -35,15 +35,15 @@
         <clear/>
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
       </providers>
-    </profile>
+    </profile>-->
 
-    <roleManager enabled="false">
+    <!--<roleManager enabled="false">
       <providers>
         <clear/>
         <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
         <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
       </providers>
-    </roleManager>
+    </roleManager>-->
 
   </system.web>
 
