Added GoogleAnalytics tracking and fixed a couple of web page typos
Added support for GForce STN devices

--- a/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
+++ b/TestCsvToTcxConverter/TestCsvToTcxConverter.csproj
@@ -48,6 +48,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestLeMondGForceSTNCsvDataProvider.cs" />
     <Compile Include="TestTcxDataFactory.cs" />
     <Compile Include="TestCompuTrainer3DPFileProvider.cs" />
     <Compile Include="ExceptionAssert.cs" />
