Update Lemond Revolution to accept times with single digit hours

--- a/WebConvertToTcx/WebConvertToTcx.csproj
+++ b/WebConvertToTcx/WebConvertToTcx.csproj
@@ -20,6 +20,10 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -120,6 +124,10 @@
       <Project>{B3AF4C7D-E31A-48E1-B791-4FCCF5A7DB93}</Project>
       <Name>ConvertToTcx</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\reedjrs.com - test.pubxml" />
+    <None Include="Properties\PublishProfiles\reedjrs.com convert RTW.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
