--- a/WebConvertToTcx/Web.config
+++ b/WebConvertToTcx/Web.config
@@ -6,11 +6,11 @@
   -->
 
 <configuration>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="ApplicationServices"
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
          providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
 
 
   <system.web>
